# shm_ipc

./: .gitignore  Makefile  shm_ipc.opam
src/: jbuild  shm_ipc.ml  shm_stubs_ipc.c  shm_stubs_ipc.h  shm_stubs_lib.c  shm_stubs_lib.h  shm_stubs_ocaml.cpp
src/config/: configure.ml  jbuild
test/: jbuild  test_shm.ml
